Thu Jun 17 17:38:50 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* include/dblib.h include/sybdb.h include/tds.h:
	* src/apps/freebcp.c src/apps/freebcp.h src/ctlib/blk.c:
	* src/dblib/bcp.c src/dblib/dblib.c:
	- applied Bill Thompson patch on dblib
	 - This patch contains my rework of the dblibrary bcp api, 
	 - and also enhancements to freebcp.
	 - As a by-product, I also enhanced dbbind/dbnullbind
	
Tue Jun 15 15:15:06 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/server/login.c:
	- fix compile error on HP-UX 11.00

Tue Jun 15 13:45:35 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am src/server/Makefile.am src/tds/Makefile.am:
	* src/tds/libgcc.la.in(added):
	- include libgcc statically if needed
	- try to fix *BSD linking problem

Mon Jun 14 20:35:43 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* doc/Makefile.am doc/bsqldb.txt doc/defncopy.txt
	* doc/userguide.sgml
	- added man pages for bsqldb and defncopy

Sun Jun 13 19:35:43 EDT 2004	JK Lowden <jklowden@schemamania.org>
	* configure.in comments with '#' instead of 'dnl'; add AC_REVISION.
	* src/dblib/rpc.c dos2unix: s/\r//g.

Sun Jun 13 15:18:08 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in: some updates and fix for -Bsymbolic detect
	* src/apps/defncopy.c src/ctlib/blk.c:	
	- remove warnings compiling under Solaris
	* src/odbc/Makefile.am: fix for darwin

Sat Jun 12 19:00:28 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* configure.in src/ctlib/Makefile.am src/dblib/Makefile.am:
	* src/odbc/Makefile.am:
	- use -Bsymbolic linker option if available

Sat Jun 12 18:22:49 CET 2004    Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/descriptor.c:
	- fix momory leak in SQLCopyDesc
	- fix double pointer if out of memory
	* src/odbc/unittests/convert_error.c:
	- commented part of test

Sat Jun 12 13:43:41 CET 2004    Frediano Ziglio <freddy77@angelfire.com>